# Phenix-DB

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.kiro/specs/phenix-vision-refactor/: tasks.md
docs/: CONTRIBUTING.md  TODO.md  index.md
docs/development/: code-organization.md
docs/reasoning/: 01-vector-transformation-engine.md  02-indexing-retrieval-core.md  03-hierarchical-memory-system.md  04-compression-storage-efficiency.md  05-adaptive-learning-optimization.md  README.md
phenix-db/: .gitignore  Cargo.toml  README.md  phenix-db.toml.example
phenix-db/benches/: entity_operations.rs  vector_operations.rs
phenix-db/examples/: config_demo.rs
phenix-db/src/: lib.rs
phenix-db/src/api/: cognitive_query.rs  grpc.rs  mod.rs  protocol.rs  rest.rs
phenix-db/src/concurrency/: atomic_ops.rs  lockfree.rs  mod.rs  mvcc_engine.rs  transaction_coordinator.rs
phenix-db/src/core/: config.rs  edges.rs  entity.rs  error.rs  metadata.rs  mod.rs  mvcc.rs  query.rs  traits.rs  transaction.rs  types.rs  vector.rs
phenix-db/src/deployment/: mod.rs
phenix-db/src/distributed/: consciousness.rs  consensus.rs  mod.rs  node.rs  rebalancer.rs  replication.rs  router.rs
phenix-db/src/index/: gpu.rs  mod.rs  polynomial_tree.rs  probabilistic_graph.rs  simd.rs  vector_transform.rs
phenix-db/src/learning/: access_predictor.rs  feedback_loop.rs  mod.rs  pattern_learner.rs  semantic_drift.rs
phenix-db/src/mathematical/: compression.rs  entropy.rs  geometry.rs  learning.rs  mod.rs  optimization.rs  polynomial.rs  probability.rs
phenix-db/src/memory/: bellman_optimizer.rs  cognitive_cache.rs  entropy_monitor.rs  kce.rs  mod.rs  pgm.rs  rpi.rs  vnr.rs
phenix-db/src/observability/: logging.rs  mathematical_monitors.rs  metrics.rs  mod.rs  tracing.rs
phenix-db/src/security/: audit.rs  auth.rs  encryption.rs  homomorphic.rs  kms.rs  mod.rs  zero_knowledge.rs
phenix-db/src/shard/: mod.rs
phenix-db/src/storage/: cold_tier.rs  hot_tier.rs  mod.rs  persistence.rs  tiering.rs  wal.rs  warm_tier.rs
phenix-db/src/worker/: mod.rs
