[package]
name = "phenix-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }

# Networking and protocols
tonic = { workspace = true }
prost = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }

# Storage and compression
# rocksdb = { workspace = true }  # Temporarily disabled due to macOS compilation issues
lz4 = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
opentelemetry = { workspace = true }

# Performance
rayon = { workspace = true }
crossbeam = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"

[[bench]]
name = "vector_operations"
harness = false

[[bench]]
name = "entity_operations"
harness = false

[lib]
name = "phenix_db"
path = "src/lib.rs"

[[bin]]
name = "phenix-db-server"
path = "src/bin/server.rs"

[[bin]]
name = "phenix-db-cli"
path = "src/bin/cli.rs"